apps/infra/homepage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: infra
  labels:
    app: homepage
    app.kubernetes.io/name: homepage
    app.kubernetes.io/instance: homepage
    app.kubernetes.io/part-of: phoenyxlab
    app.kubernetes.io/managed-by: kustomize
spec:
  selector:
    app: homepage
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
