apps/infra/homepage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
  namespace: infra
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - homepage.phoenyxlab.xyz
  rules:
    - host: homepage.phoenyxlab.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homepage
                port:
                  number: 3000
